# examens-python

./: .gitignore  .pdm.toml  Algebra.html  Algebra.py  LatexMk  README.md  coordenades.asy  credentials.py  eixos.asy  enviar-examens.py  eseiaat-ma.tex  examen.py  examen.sty  examens-grup.py  pyproject.toml  test.py
examples/example1/: Algebra.py  Problemes.py  Problemes0.py  Problemes2.py  Problemes3.py  Problemes4.py  README.md  estudiants.csv  ex2.tex  examen.py  examen.tex  exams.py  p1.tex  p2.tex
examples/example1/tex/: cano-medina-carles-solucio.tex  castillo-vazquez-ivan-solucio.tex  clemente-castro-sergi.tex  hernandez-molina-francesc-solucio.tex  moreno-garcia-jordi.tex  puig-ferrer-marta-solucio.tex  sans-ramirez-gemma-solucio.tex
examples/example2/: Problemes.py  README.md  estudiants.csv  examen.tex  p1.tex  p2.tex  p3.tex  p4.tex  p5.tex
examples/example2/tex/: cano-medina-carles-solucio.tex  cano-medina-carles.tex  castillo-vazquez-ivan-solucio.tex  castillo-vazquez-ivan.tex  clemente-castro-sergi-solucio.tex  clemente-castro-sergi.tex  (+16 more)
exemple/: Problemes.py  p2.tex  p3.tex  p4.tex
exemple/tex/: cano-medina-carles.tex  castillo-vazquez-ivan.tex  clemente-castro-sergi-solucio.tex  diaz-badenas-marc-solucio.tex  diaz-badenas-marc.tex  franch-morell-anna-solucio.tex  franch-morell-anna.tex  hernandez-molina-francesc.tex  maristany-ortega-andrea-solucio.tex  maristany-ortega-andrea.tex  moreno-garcia-jordi-solucio.tex  puig-ferrer-marta.tex  ramos-rubio-aina-solucio.tex  ramos-rubio-aina.tex  sans-ramirez-gemma.tex
templates/: exam.tex  problem.tex
