[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.11.0",
    "ipykernel>=6.21.3",
]

[project]
name = "rexams"
version = "0.1.0"
description = "A tool to randomize exams."
authors = [
    {name = "Rafel Amer", email = "rafel.amer@upc.edu"},
    {name = "Jordi Saludes", email = "jordi.saludes@upc.edu"}
]
dependencies = [
    "sympy>=1.11.1",
    "hypothesis>=6.68.2",
    "jinja2>=3.1.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
